--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "url": "^0.11.0",
     "vue": "^2.4.4",
     "vue-router": "^2.7.0",
     "vuetify": "^0.16.3"
