--- a/package.json
+++ b/package.json
@@ -12,42 +12,41 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "@mdi/font": "^2.6.95",
-    "axios": "^0.19.0",
-    "core-js": "^2.6.5",
+    "@mdi/font": "^4.8.95",
+    "axios": "^0.19.2",
+    "core-js": "^3.6.4",
     "github-markdown-css": "^3.0.1",
-    "marked": "^0.7.0",
+    "marked": "^0.8.0",
     "roboto-fontface": "*",
-    "semver": "^6.2.0",
-    "ua-parser-js": "^0.7.20",
+    "semver": "^7.1.1",
+    "ua-parser-js": "^0.7.21",
     "url": "^0.11.0",
-    "vue": "^2.6.10",
-    "vue-router": "^3.0.7",
-    "vuetify": "^2.0.0-beta.9",
-    "vuex": "^3.0.1"
+    "vue": "^2.6.11",
+    "vue-router": "^3.1.5",
+    "vuetify": "^2.2.8",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@vue/cli-plugin-babel": "^3.9.0",
-    "@vue/cli-plugin-e2e-cypress": "^3.9.0",
-    "@vue/cli-plugin-eslint": "^3.9.0",
-    "@vue/cli-plugin-pwa": "^3.9.0",
-    "@vue/cli-plugin-unit-jest": "^3.9.0",
-    "@vue/cli-service": "^3.9.0",
-    "@vue/eslint-config-standard": "^4.0.0",
-    "@vue/test-utils": "1.0.0-beta.29",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@vue/cli-plugin-babel": "^4.1.2",
+    "@vue/cli-plugin-e2e-cypress": "^4.1.2",
+    "@vue/cli-plugin-eslint": "^4.1.2",
+    "@vue/cli-plugin-pwa": "^4.1.2",
+    "@vue/cli-plugin-unit-jest": "^4.1.2",
+    "@vue/cli-service": "^4.1.2",
+    "@vue/eslint-config-standard": "^5.1.0",
+    "@vue/test-utils": "1.0.0-beta.31",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
-    "eslint": "^6.1.0",
-    "eslint-plugin-vue": "^5.2.3",
-    "eslint-plugin-vuetify": "^1.0.0-beta.1",
-    "sass": "^1.18.0",
-    "sass-loader": "^7.1.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "vue-cli-plugin-vuetify": "^0.5.0",
-    "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.0.5"
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^25.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-vuetify": "^0.4.1",
+    "eslint-plugin-vue": "^6.1.2",
+    "eslint-plugin-vuetify": "^1.0.0-beta.5",
+    "sass": "^1.25.0",
+    "sass-loader": "^8.0.2",
+    "vue-cli-plugin-vuetify": "^2.0.3",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.4.3"
   }
 }
